# ECF5_churnguard

.claude/: settings.local.json
.github/: release.yml
.github/workflows/: ci.yml  release.yml
_tmp_docx/: [Content_Types].xml  enonce.txt
_tmp_docx/customXml/: item2.xml  item4.xml  itemProps2.xml  itemProps3.xml  itemProps4.xml
_tmp_docx/docProps/: app.xml  core.xml  custom.xml
_tmp_docx/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
_tmp_docx/word/_rels/: document.xml.rels
k8s/: api-deployment.yaml  api-service.yaml  mlflow-deployment.yaml  mlflow-service.yaml
repo_depart/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RGPD.md  docker-compose.yml  pyproject.toml  requirements.txt
repo_depart/.github/workflows/: ci.yml
repo_depart/api/: main.py
repo_depart/churnguard/: __init__.py  data.py  evaluate.py  train.py
repo_depart/monitoring/: drift.py  requirements-monitoring.txt
repo_depart/scripts/: bootstrap_model.py  train_mlflow.py
repo_depart/tests/: test_data.py  test_train.py
