[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churnguard"
version = "0.1.0"
description = "MLOps pipeline for churn prediction - TelcoFr"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy", "pandas-stubs"]

[tool.setuptools.packages.find]
where = ["."]
include = ["churnguard*"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["churnguard"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "mlflow.*"]
ignore_missing_imports = true